--- a/public/css/page.css
+++ b/public/css/page.css
@@ -9,6 +9,23 @@ body::-webkit-scrollbar, .results::-webkit-scrollbar{
     display: none;
 }
 
+#add-wish{
+    background-image: url('https://cdn.pixabay.com/photo/2014/04/02/10/41/button-304224_960_720.png');
+    border-radius: 20px;
+}
+
+#add-watch{
+    background-image: url('https://cdn.pixabay.com/photo/2015/06/09/16/12/icon-803718_960_720.png');
+    border-radius: 20px;
+}
+
+#add-wish, #add-watch{
+    background-size: 100%;
+    height: 20px;
+    width: 20px;
+    align-self: flex-end;
+}
+
 .menubar{
     display: flex;
     align-items: flex-end;
