Fixed edit size

--- a/public/css/serial.css
+++ b/public/css/serial.css
@@ -430,6 +430,9 @@ a{
         .create-tv{
             width: 70%;
         }
+        .edit-tv{
+            width: 70%;
+        }
         
     #e404{
         width: 100%;
